# meron

./: .editorconfig  .gitignore  CONTRIBUTING.md  README.md  accounts.go  app.go  app_accounts_test.go  app_helpers_test.go  app_mail_handlers_test.go  app_mailto_test.go  app_move_test.go  app_paths_test.go  app_thread_messages_test.go  app_threads_test.go  applog.go  autodiscover.go  autodiscover_test.go  avatar_download_test.go  changelog.go  csp_dev.go  csp_prod.go  desktop.go  feeds.go  file_picker_test.go  filepick.go  filepick_portal_linux.go  filepick_portal_linux_test.go  filepick_portal_other.go  go.mod  go.sum  integration_test.go  maddy_harness_test.go  mail.go  mailjson.go  main.go  notify.go  notify_darwin.go  notify_darwin.m  notify_linux.go  notify_linux_test.go  (+25 more)
.githooks/: pre-commit
.github/: FUNDING.yml
.github/workflows/: android-release.yml  release.yml  test.yml
changelogs/: template.txt  v0.1.1.txt  v0.1.3.txt  v0.1.4.txt  v0.1.5.txt  v0.1.6.txt  v0.1.7.txt
cmd/obfuscate/: main.go
frontend/: index.html  package.json  test-setup.ts  vite.config.js
frontend/src/: App.tsx  boot.ts  index.css  main.tsx  types.ts  useAppEffects.ts
internal/obf/: obf.go  obf_roundtrip_test.go
locales/: ar.json  de.json  el.json  en.json  es.json  et.json  fr.json  it.json  ja.json  ko.json  lv.json  pl.json  pt.json  pt_BR.json  sv.json  tr.json  vi.json  zh_Hans.json  zh_Hant.json
meron-core/: Cargo.toml
meron-core/src/: changelog.rs  engine.rs  ffi.rs  imap.rs  lib.rs  log.rs  mail_model.rs  main.rs  parse.rs  protocol.rs  rss.rs  secrets.rs  secrets_portal.rs  smtp.rs  thread_read.rs  unified.rs
meron-core/src/protocol/: accounts.rs  feeds.rs  helpers.rs  mail.rs  media.rs  mod.rs  oauth.rs  tests.rs
meron-core/src/rss/: opml.rs  tests.rs
meron-core/src/store/: accounts.rs  db.rs  mod.rs  settings.rs  tests.rs
mobile/: .gitignore  build.gradle  gradle.properties  settings.gradle
scripts/: build.sh
snap/: snapcraft.yaml
(+454 files in other folders)
